feat: header under navigation is ready

--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
     <header>
@@ -24,7 +26,40 @@
                 <li><a href="/">AA</a></li>
             </ul>
         </nav>
+
+        <section class="wrap-certificates">
+            <article>
+                <div class="wrap-certificates-text">
+                    <h1>Web Development Certificates</h1>
+                    <p>
+                        Acquired certificates and a diploma from the training at SoftUni (Software University) prove the
+                        knowledge and skills you have acquired and must be presented to employers.
+                    </p>
+                    <p>
+                        Certificate - certificate for a course at SoftUni (Software University) is issued after a
+                        successfully passed examination with a mark of B or higher.
+                    </p>
+                    <p>
+                        Diploma - students of SoftUni (Software University) receive a full diploma for a profession
+                        after collecting the required number of credits (C# and Java Web Developer - 130 credits, Python
+                        and JavaScript Web Developer - 100 credits).
+                    </p>
+                </div>
+                <div class="wrap-certificates-images">
+                    <div class="wrap-blue-certificate">
+                        <img src="../Requirements-and-Resources/images/blue-certificate.jpg" alt="blue-certificate">
+                    </div>
+                    <div class="wrap-dark-certificate">
+                        <img src="../Requirements-and-Resources/images/dark-certificate.jpg" alt="dark-certificate">\
+                    </div>
+                </div>
+                <p>
+                    The diploma awarded by SoftUni is not state recognized but is recognized by the employers.
+                </p>
+            </article>
+        </section>
     </header>
-    
+
 </body>
+
 </html>
