feat: add diploma section html

--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
@@ -60,6 +60,34 @@
         </section>
     </header>
 
+    <main>
+        <article class="diploma">
+            <h2>Diploma</h2>
+            <section class="diploma-gray-text">
+                <p>
+                    Web Developers master the programming and practical development of web-based Java software and the
+                    Java EE platform. They have strong knowledge of both back-end technologies, databases, web services
+                    and cloud applications, as well as front-end programming with JavaScript, AJAX, and Single Page
+                    Apps.
+                </p>
+
+                <p>
+                    At SoftUni, Java Web Developers gain solid practical programming skills (logical thinking and
+                    problem-solving skills, data structures and algorithms, object-oriented and functional programming,
+                    quality program code) and specialize in the development of applications through modern Web
+                    technologies, tools and technology frameworks from the Java/JavaEE ecosystem: HTML, CSS, JavaScript,
+                    jQuery, Bootstrap, AJAX, SPA, Java, Eclipse, IntelliJ IDEA, OOP, Databases, SQL, Oracle,
+                    JPA/Hibernate, Spring Framework, REST services, JAX-RS, cloud technologies, Servlets/JSP, Spring MVC
+                    и Java EE as well as working with Git, GitHub and teamwork collaboration and development tools.
+                </p>
+            </section>
+            <p>
+                To acquire a complete software engineering diploma or certificate from individual courses, you can apply
+                for admission to SoftUni programming program.
+            </p>
+        </article>
+    </main>
+
 </body>
 
 </html>
