feat: article explore is ready

--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
@@ -86,6 +86,21 @@
                 for admission to SoftUni programming program.
             </p>
         </article>
+
+        <article class="explore">
+            <section class="center-explore">
+                <h2>Explore our Software Engineering Program</h2>
+                <p>
+                    Start with a free Programming Basics training, begin your career in the IT sector and graduate as a
+                    full
+                    stack developer!
+                </p>
+                <div class="explore-wrap-buttons">
+                    <button class="apply">Apply</button>
+                    <button class="curriculum">Curriculum</button>
+                </div>
+            </section>
+        </article>
     </main>
 
 </body>
