feat: header is ready

--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
@@ -103,6 +103,46 @@
         </article>
     </main>
 
+    <footer>
+        <section>
+            <div class="footer-wrap-logo-and-text">
+                <img src="../Requirements-and-Resources/images/logo.svg" alt="logo-footer">
+                <p>Ⓒ 2020 - Software University LTD</p>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Curriculum</a>
+                    </li>
+                    <li>
+                        <a href="/">About Us</a>
+                    </li>
+                    <li>
+                        <a href="/">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="/">Webinars</a>
+                    </li>
+                    <li>
+                        <a href="/">SoftUni Romania</a>
+                    </li>
+                    <li>
+                        <i class="fab fa-facebook-f"></i>
+                    </li>
+                    <li>
+                        <i class="fab fa-instagram"></i>
+                    </li>
+                    <li>
+                        <i class="fab fa-twitter"></i>
+                    </li>
+                    <li>
+                        <i class="fab fa-youtube"></i>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+    </footer>
+
 </body>
 
 </html>
