fix: add a tag to the font icons in footer

--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
@@ -127,16 +127,24 @@
                         <a href="/">SoftUni Romania</a>
                     </li>
                     <li>
-                        <i class="fab fa-facebook-f"></i>
+                        <a href="/">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
                     </li>
                     <li>
-                        <i class="fab fa-instagram"></i>
+                        <a href="/">
+                            <i class="fab fa-instagram"></i>
+                        </a>
                     </li>
                     <li>
-                        <i class="fab fa-twitter"></i>
+                        <a href="/">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </li>
                     <li>
-                        <i class="fab fa-youtube"></i>
+                        <a href="/">
+                            <i class="fab fa-youtube"></i>
+                        </a>
                     </li>
                 </ul>
             </nav>
