feat: solution task-1

--- a/00.Exams/21-March-2020/01. Login/Solution/index.html
+++ b/00.Exams/21-March-2020/01. Login/Solution/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <section>
+        <article>
+            <h1>Account Login</h1>
+            <form>
+                <div class="icon wrap-username">
+                    <input type="text" placeholder="Username">
+                </div>
+                <div class="icon wrap-password">
+                    <input type="password" placeholder="Password">
+                </div>
+                <div class="wrap-btn">
+                    <input type="submit" value="LOGIN">
+                </div>
+            </form>
+        </article>
+    </section>
     
 </body>
 </html>
