feat: solution task-2 and task 3

--- a/00.Exams/28-March-2020/02. Beats/Solution/index.html
+++ b/00.Exams/28-March-2020/02. Beats/Solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,109 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">products</a></li>
+                <li><a href="/">about us</a></li>
+                <li><a href="/">supports</a></li>
+                <li><a href="/">explores</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="text-and-img-wrapper headphone">
+            <article class="wrap-text">
+                <h2>solo wireless</h2>
+                <p>
+                    With up to 40 hours of battery life, Beats Solo Wireless is
+                    your perfect everyday headphone. Get the most out of your
+                    music with an award-winning, emotionally charged Beats
+                    listening experience.
+                </p>
+                <button class="red-btn">
+                    <a href="/">view more</a>
+                </button>
+            </article>
+            <article class="wrap-image">
+                <img src="../Requirements-and-Resources/images/beats-landing-main.jpg" class="red-headphone"
+                    alt="red-headphone">
+            </article>
+        </section>
+
+        <section class="text-and-img-wrapper earphone">
+            <article class="wrap-image">
+                <img src="../Requirements-and-Resources/images/powerbeats.png" class="small-earphone" alt="earphone">
+            </article>
+            <article class="wrap-text">
+                <div class="wrap-heading-and-text-below">
+                    <h2>powerbeats</h2>
+                    <p class="under-h2">
+                        <strong>performance.</strong> power. freedom
+                    </p>
+                </div>
+                <p>
+                    Powerbeats3 earphones are ready for any challenge with
+                    up to 12 hours of battery life to fuel multiple long
+                    workouts and powerful, dynamic sound
+                    to keep you pushing.
+                </p>
+                <div class="wrap-price-and-btn">
+                    <p class="price">
+                        $199.95
+                    </p>
+                    <button class="red-btn">
+                        <a href="/">view more</a>
+                    </button>
+                </div>
+            </article>
+        </section>
+
+        <section class="gray">
+            <article class="gray-logo-and-heading">
+                <div class="wrap-beat-logo">
+                    <img src="../Requirements-and-Resources/images/beats-logo-small-white.png" alt="beat-small-logo">
+                </div>
+                <p class="gray-heading">
+                    try 3 months beats music <strong>free</strong>
+                </p>
+            </article>
+            <article class="read-more">
+                <p>
+                    <strong>read more ></strong>
+                </p>
+            </article>
+        </section>
+
+        <section class="two-big-images">
+            <article class="left-image">
+                <img src="../Requirements-and-Resources/images/beats-girl.png" alt="">
+            </article>
+            <article class="right-image">
+                <div class="wrap-text-big-images">
+                    <p class="big-gray-p">give</p>
+                    <p class="big-gray-p">live</p>
+                    <p class="colorful">
+                        beats <span class="red">red</span>
+                    </p>
+                </div>
+                <div class="red-small-beats">
+                    <img src="../Requirements-and-Resources/images/beats-red.png" alt="">
+                </div>
+            </article>
+        </section>
+    </main>
     
-    
+    <footer>
+        <p>
+            Beats by Dre, 2017 ©
+        </p>
+    </footer>
+
 </body>
+
 </html>
