feat: solution task-1

--- a/00.Exams/03-November-2019/01_Earth/Solution/index.html
+++ b/00.Exams/03-November-2019/01_Earth/Solution/index.html
@@ -17,7 +17,63 @@
             <p class="planet">Planet</p>
         </header>
 
-        
+        <main>
+            <section class="upper">
+                <article class="wrap-image">
+                    <img src="../Requirements-and-Resources/Earth.jpg" alt="Earth">
+                    <p class="text-img special-text">
+                        The Blue Marble, the first full-view photograph of the planet, was taken by Apollo 17 astronauts
+                        en route to the Moon in 1972
+                    </p>
+                </article>
+
+                <article class="wrap-text special-text">
+                    Earth is the third planet from the Sun and the only astronomical object known to harbor life.
+                    According
+                    to radiometric dating and other sources of evidence, Earth formed over 4.5 billion years ago.
+                    Earth's axis of rotation is tilted with respect to its orbital plane, producing seasons on Earth.
+                    The
+                    gravitational interaction between Earth and the Moon causes tides, stabilizes Earth's orientation on
+                    its
+                    axis, and gradually slows its rotation. Earth is the third planet from the Sun and the only
+                    astronomical object known to harbor life. According
+                    to radiometric dating and other sources of evidence, Earth formed over 4.5 billion years ago.
+                    Earth's axis of rotation is tilted with respect to its orbital plane, producing seasons on Earth.
+                    The
+                    gravitational interaction between Earth and the Moon causes tides, stabilizes Earth's orientation on
+                    its
+                    axis, and gradually slows its rotation. Earth is the third planet from the Sun and the only
+                    astronomical object known to harbor life. According
+                    to radiometric dating and other sources of evidence, Earth formed over 4.5 billion years ago.
+                    Earth's axis of rotation is tilted with respect to its orbital plane, producing seasons on Earth.
+                    The
+                    gravitational interaction between Earth and the Moon causes tides, stabilizes Earth's orientation on
+                    its
+                    axis, and gradually slows its rotation. Earth is the third planet from the Sun and the only
+                    astronomical object known to harbor life. According
+                    to radiometric dating and other sources of evidence, Earth formed over 4.5 billion years ago.
+                    Earth's axis of rotation is tilted with respect to its orbital plane, producing seasons on Earth.
+                    The
+                    gravitational interaction between Earth and the Moon causes tides, stabilizes Earth's orientation on
+                    its
+                    axis, and gradually slows its rotation.
+                    
+                </article>
+            </section>
+
+            <section class="lower">
+                <p>Facts about Earth</p>
+            </section>
+        </main>
+
+        <footer>
+            <ul>
+                <li><strong>Population:</strong> 7.53 billion (2017)</li>
+                <li><strong>Age:</strong> 4.543 billion years</li>
+                <li><strong>Distance from Sun:</strong> 149.6 million km</li>
+                <li><strong>Did you know:</strong> The Earth gets 100 tons heavier every day due to falling meteoric dust.</li>
+            </ul>
+        </footer>
     </div>
 
 </body>
